# python-learning1244

./: .gitignore
lanchain_practice/: agents.py  chan.py  emb.py  langgraph_test.py  main.py  pydentic.py  pyproject.toml  rag_loader.py  rag_text_spletting.py  texxt.txt
lanchain_practice/chroma_langchain_db/: chroma.sqlite3
multi_agent_flow/: main.py  pyproject.toml
python-practice/: history.txt  main.py  pyproject.toml
python-practice/controlers/: products.py
